# anal

./: .gitattributes  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  no-pull-requests.yml  release.yml
crates/anal-cli/: Cargo.toml  build.rs
crates/anal-cli/src/: main.rs  op_help.rs  repl.rs
crates/anal-core/: Cargo.toml
crates/anal-core/src/: ast.rs  check.rs  compiler.rs  error.rs  ledger.rs  lexer.rs  lib.rs  op.rs  parser.rs  session.rs  token.rs  value.rs  vm.rs
docs/: index.html
docs/drafts/: spec-v0.html
examples/: add_two.anal  bad.anal  collatz.anal  consent_dialog.anal  countdown.anal  deep_insert.anal  echo.anal  expand.anal  fizzbuzz.anal  hard_mode.anal  hello.anal  hold.anal  ledger_demo.anal  square.anal
scripts/: install.ps1  install.sh
tools/vscode-anal/: README.md  language-configuration.json  package.json
tools/vscode-anal/syntaxes/: anal.tmLanguage.json
tools/vscode-anal/test/: highlight-smoke.anal
