[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/anal-lang/anal"
authors = ["ANAL Lang Contributors"]
rust-version = "1.75"

[workspace.dependencies]
logos     = "0.14"
ariadne   = "0.4"
thiserror = "1"
clap      = { version = "4", features = ["derive"] }
anyhow    = "1"
blake3    = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
