[package]
name = "anal-cli"
description = "Command-line interface for the ANAL programming language."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "anal"
path = "src/main.rs"

[dependencies]
anal-core = { path = "../anal-core" }
clap      = { workspace = true }
anyhow    = { workspace = true }
rustyline = "18"
